gen/su/nsk/iae/reflex/antlr/ReflexParser.java
// Generated from C:/Users/iarte/Projects/ReflexVCG/src/main/java/su/nsk/iae/reflex/antlr/Reflex.g4 by ANTLR 4.13.1
package su.nsk.iae.reflex.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReflexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, PORT_TYPE=65, BREAK=66, 
		INFIX_POSTFIX_OP=67, MUL_OP=68, SHIFT_OP=69, EQ_OP=70, BIT_AND_OP=71, 
		BIT_XOR_OP=72, BIT_OR_OP=73, AND_OP=74, OR_OP=75, COMP_OP=76, INTEGER=77, 
		UNSIGNED_INTEGER=78, FLOAT=79, DEC_FLOAT=80, HEX_FLOAT=81, DEC_SEQ=82, 
		HEX_SEQ=83, BIN_EXPONENT=84, EXPONENT=85, DECIMAL=86, OCTAL=87, HEX=88, 
		HEX_PREFIX=89, LONG=90, FLOAT_SUFFIX=91, UNSIGNED=92, TIME=93, DAY=94, 
		HOUR=95, MINUTE=96, SECOND=97, MILISECOND=98, BOOL_VAL=99, STRING=100, 
		WS=101, ID=102;
	public static final int
		RULE_program = 0, RULE_clockDefinition = 1, RULE_process = 2, RULE_state = 3, 
		RULE_annotation = 4, RULE_annotationKey = 5, RULE_importedVariableList = 6, 
		RULE_processVariable = 7, RULE_globalVariable = 8, RULE_physicalVariable = 9, 
		RULE_portMapping = 10, RULE_programVariable = 11, RULE_timeoutFunction = 12, 
		RULE_timeAmountOrRef = 13, RULE_functionDecl = 14, RULE_port = 15, RULE_const = 16, 
		RULE_enum = 17, RULE_enumMember = 18, RULE_statement = 19, RULE_statementSeq = 20, 
		RULE_compoundStatement = 21, RULE_ifElseStat = 22, RULE_switchStat = 23, 
		RULE_caseStat = 24, RULE_defaultStat = 25, RULE_switchOptionStatSeq = 26, 
		RULE_startProcStat = 27, RULE_stopProcStat = 28, RULE_errorProcStat = 29, 
		RULE_restartStat = 30, RULE_resetStat = 31, RULE_setStateStat = 32, RULE_functionCall = 33, 
		RULE_checkStateExpression = 34, RULE_stateQual = 35, RULE_infixOp = 36, 
		RULE_postfixOp = 37, RULE_primaryExpression = 38, RULE_unaryExpression = 39, 
		RULE_expression = 40, RULE_unaryOp = 41, RULE_addOp = 42, RULE_assignOp = 43, 
		RULE_type = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "clockDefinition", "process", "state", "annotation", "annotationKey", 
			"importedVariableList", "processVariable", "globalVariable", "physicalVariable", 
			"portMapping", "programVariable", "timeoutFunction", "timeAmountOrRef", 
			"functionDecl", "port", "const", "enum", "enumMember", "statement", "statementSeq", 
			"compoundStatement", "ifElseStat", "switchStat", "caseStat", "defaultStat", 
			"switchOptionStatSeq", "startProcStat", "stopProcStat", "errorProcStat", 
			"restartStat", "resetStat", "setStateStat", "functionCall", "checkStateExpression", 
			"stateQual", "infixOp", "postfixOp", "primaryExpression", "unaryExpression", 
			"expression", "unaryOp", "addOp", "assignOp", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'program'", "'{'", "'}'", "'clock'", "';'", "'process'", 
			"'state'", "'looped'", "':'", "'.'", "'shared'", "','", "'from'", "'='", 
			"'timeout'", "'('", "')'", "'const'", "'enum'", "'if'", "'else'", "'switch'", 
			"'case'", "'default'", "'start'", "'stop'", "'error'", "'restart'", "'reset'", 
			"'timer'", "'set'", "'next'", "'in'", "'active'", "'inactive'", "'+'", 
			"'-'", "'~'", "'!'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
			"'>>='", "'&='", "'^='", "'|='", "'void'", "'bool'", "'time'", "'float'", 
			"'double'", "'int8'", "'uint8'", "'int16'", "'uint16'", "'int32'", "'uint32'", 
			"'int64'", "'uint64'", null, null, null, null, null, null, "'&'", "'^'", 
			"'|'", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "PORT_TYPE", "BREAK", "INFIX_POSTFIX_OP", 
			"MUL_OP", "SHIFT_OP", "EQ_OP", "BIT_AND_OP", "BIT_XOR_OP", "BIT_OR_OP", 
			"AND_OP", "OR_OP", "COMP_OP", "INTEGER", "UNSIGNED_INTEGER", "FLOAT", 
			"DEC_FLOAT", "HEX_FLOAT", "DEC_SEQ", "HEX_SEQ", "BIN_EXPONENT", "EXPONENT", 
			"DECIMAL", "OCTAL", "HEX", "HEX_PREFIX", "LONG", "FLOAT_SUFFIX", "UNSIGNED", 
			"TIME", "DAY", "HOUR", "MINUTE", "SECOND", "MILISECOND", "BOOL_VAL", 
			"STRING", "WS", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Reflex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReflexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public AnnotationContext annotation;
		public List<AnnotationContext> annotations = new ArrayList<AnnotationContext>();
		public Token name;
		public ClockDefinitionContext clock;
		public ConstContext const_;
		public List<ConstContext> consts = new ArrayList<ConstContext>();
		public EnumContext enum_;
		public List<EnumContext> enums = new ArrayList<EnumContext>();
		public FunctionDeclContext functionDecl;
		public List<FunctionDeclContext> functions = new ArrayList<FunctionDeclContext>();
		public GlobalVariableContext globalVariable;
		public List<GlobalVariableContext> globalVars = new ArrayList<GlobalVariableContext>();
		public PortContext port;
		public List<PortContext> ports = new ArrayList<PortContext>();
		public ProcessContext process;
		public List<ProcessContext> processes = new ArrayList<ProcessContext>();
		public TerminalNode EOF() { return getToken(ReflexParser.EOF, 0); }
		public TerminalNode ID() { return getToken(ReflexParser.ID, 0); }
		public ClockDefinitionContext clockDefinition() {
			return getRuleContext(ClockDefinitionContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<ConstContext> const_() {
			return getRuleContexts(ConstContext.class);
		}
		public ConstContext const_(int i) {
			return getRuleContext(ConstContext.class,i);
		}
		public List<EnumContext> enum_() {
			return getRuleContexts(EnumContext.class);
		}
		public EnumContext enum_(int i) {
			return getRuleContext(EnumContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<GlobalVariableContext> globalVariable() {
			return getRuleContexts(GlobalVariableContext.class);
		}
		public GlobalVariableContext globalVariable(int i) {
			return getRuleContext(GlobalVariableContext.class,i);
		}
		public List<PortContext> port() {
			return getRuleContexts(PortContext.class);
		}
		public PortContext port(int i) {
			return getRuleContext(PortContext.class,i);
		}
		public List<ProcessContext> process() {
			return getRuleContexts(ProcessContext.class);
		}
		public ProcessContext process(int i) {
			return getRuleContext(ProcessContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReflexVisitor ) return ((ReflexVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(90);
				match(T__0);
				setState(91);
				((ProgramContext)_localctx).annotation = annotation();
				((ProgramContext)_localctx).annotations.add(((ProgramContext)_localctx).annotation);
				setState(92);
				match(T__1);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__2);
			setState(100);
			((ProgramContext)_localctx).name = match(ID);
			setState(101);
			match(T__3);
			setState(102);
			((ProgramContext)_localctx).clock = clockDefinition();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4503599624224510L) != 0) || _la==T__63 || _la==PORT_TYPE) {
				{
				setState(109);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(103);
					((ProgramContext)_localctx).const_ = const_();
					((ProgramContext)_localctx).consts.add(((ProgramContext)_localctx).const_);
					}
					break;
				case 2:
					{
					setState(104);
					((ProgramContext)_localctx).enum_ = enum_();
					((ProgramContext)_localctx).enums.add(((ProgramContext)_localctx).enum_);
					}
					break;
				case 3:
					{
					setState(105);
					((ProgramContext)_localctx).functionDecl = functionDecl();
					((ProgramContext)_localctx).functions.add(((ProgramContext)_localctx).functionDecl);
					}
					break;
				case 4:
					{
					setState(106);
					((ProgramContext)_localctx).globalVariable = globalVariable();
					((ProgramContext)_localctx).globalVars.add(((ProgramContext)_localctx).globalVariable);
					}
					break;
				case 5:
					{
					setState(107);
					((ProgramContext)_localctx).port = port();
					((ProgramContext)_localctx).ports.add(((ProgramContext)_localctx).port);
					}
					break;
				case 6:
					{
					setState(108);
					((ProgramContext)_localctx).process = process();
					((ProgramContext)_localctx).processes.add(((ProgramContext)_localctx).process);
					}
					break;
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(T__4);
			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClockDefinitionContext extends ParserRuleContext {
		public Token intValue;
		public Token timeValue;
		public TerminalNode UNSIGNED_INTEGER() { return getToken(ReflexParser.UNSIGNED_INTEGER, 0); }
		public TerminalNode TIME() { return getToken(ReflexParser.TIME, 0); }
		public ClockDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clockDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).enterClockDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).exitClockDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReflexVisitor ) return ((ReflexVisitor<? extends T>)visitor).visitClockDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClockDefinitionContext clockDefinition() throws RecognitionException {
		ClockDefinitionContext _localctx = new ClockDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clockDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__5);
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNSIGNED_INTEGER:
				{
				setState(118);
				((ClockDefinitionContext)_localctx).intValue = match(UNSIGNED_INTEGER);
				}
				break;
			case TIME:
				{
				setState(119);
				((ClockDefinitionContext)_localctx).timeValue = match(TIME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(122);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcessContext extends ParserRuleContext {
		public AnnotationContext annotation;
		public List<AnnotationContext> annotations = new ArrayList<AnnotationContext>();
		public Token name;
		public ImportedVariableListContext importedVariableList;
		public List<ImportedVariableListContext> imports = new ArrayList<ImportedVariableListContext>();
		public ProcessVariableContext processVariable;
		public List<ProcessVariableContext> variables = new ArrayList<ProcessVariableContext>();
		public StateContext state;
		public List<StateContext> states = new ArrayList<StateContext>();
		public TerminalNode ID() { return getToken(ReflexParser.ID, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public List<ImportedVariableListContext> importedVariableList() {
			return getRuleContexts(ImportedVariableListContext.class);
		}
		public ImportedVariableListContext importedVariableList(int i) {
			return getRuleContext(ImportedVariableListContext.class,i);
		}
		public List<ProcessVariableContext> processVariable() {
			return getRuleContexts(ProcessVariableContext.class);
		}
		public ProcessVariableContext processVariable(int i) {
			return getRuleContext(ProcessVariableContext.class,i);
		}
		public ProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).enterProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).exitProcess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReflexVisitor ) return ((ReflexVisitor<? extends T>)visitor).visitProcess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessContext process() throws RecognitionException {
		ProcessContext _localctx = new ProcessContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_process);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(124);
				match(T__0);
				setState(125);
				((ProcessContext)_localctx).annotation = annotation();
				((ProcessContext)_localctx).annotations.add(((ProcessContext)_localctx).annotation);
				setState(126);
				match(T__1);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(T__7);
			setState(134);
			((ProcessContext)_localctx).name = match(ID);
			setState(135);
			match(T__3);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 13)) & ~0x3f) == 0 && ((1L << (_la - 13)) & 4503049871556609L) != 0)) {
				{
				{
				setState(138);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__12:
					{
					setState(136);
					((ProcessContext)_localctx).importedVariableList = importedVariableList();
					((ProcessContext)_localctx).imports.add(((ProcessContext)_localctx).importedVariableList);
					}
					break;
				case T__51:
				case T__52:
				case T__53:
				case T__54:
				case T__55:
				case T__56:
				case T__57:
				case T__58:
				case T__59:
				case T__60:
				case T__61:
				case T__62:
				case T__63:
					{
					setState(137);
					((ProcessContext)_localctx).processVariable = processVariable();
					((ProcessContext)_localctx).variables.add(((ProcessContext)_localctx).processVariable);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(140);
				match(T__6);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__8) {
				{
				{
				setState(147);
				((ProcessContext)_localctx).state = state();
				((ProcessContext)_localctx).states.add(((ProcessContext)_localctx).state);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateContext extends ParserRuleContext {
		public AnnotationContext annotation;
		public List<AnnotationContext> annotations = new ArrayList<AnnotationContext>();
		public Token name;
		public Token looped;
		public StatementSeqContext stateFunction;
		public TimeoutFunctionContext func;
		public TerminalNode ID() { return getToken(ReflexParser.ID, 0); }
		public StatementSeqContext statementSeq() {
			return getRuleContext(StatementSeqContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TimeoutFunctionContext timeoutFunction() {
			return getRuleContext(TimeoutFunctionContext.class,0);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).exitState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReflexVisitor ) return ((ReflexVisitor<? extends T>)visitor).visitState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(155);
				match(T__0);
				setState(156);
				((StateContext)_localctx).annotation = annotation();
				((StateContext)_localctx).annotations.add(((StateContext)_localctx).annotation);
				setState(157);
				match(T__1);
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			match(T__8);
			setState(165);
			((StateContext)_localctx).name = match(ID);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(166);
				((StateContext)_localctx).looped = match(T__9);
				}
			}

			setState(169);
			match(T__3);
			setState(170);
			((StateContext)_localctx).stateFunction = statementSeq();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(171);
				((StateContext)_localctx).func = timeoutFunction();
				}
			}

			setState(174);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnnotationContext extends ParserRuleContext {
		public AnnotationKeyContext key;
		public Token value;
		public AnnotationKeyContext annotationKey() {
			return getRuleContext(AnnotationKeyContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ReflexParser.STRING, 0); }
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReflexListener ) ((ReflexListener)listener).exitAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReflexVisitor ) return ((ReflexVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_annotation);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				((AnnotationContext)_localctx).key = annotationKey();
				setState(177);
				match(T__10);
				setState(178);
				((AnnotationContext)_localctx).value = match(STRING);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				((AnnotationContext)_localctx).key = annotationKey();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
